// This Source Code Form is subject to the terms of the Mozilla Public
// License, v. 2.0. If a copy of the MPL was not distributed with this
// file, You can obtain one at https://mozilla.org/MPL/2.0/.

/**
 * Issue #552 (amended by #878, which removed `frequent` and `memory-focus`):
 * shipped improve profiles must load through the real profile resolver AND
 * validate against the live `ImproveProfileConfigSchema` (the same zod schema
 * that parses user config), so they are guaranteed to be accepted in the wild.
 */

import { describe, expect, test } from "bun:test";
import profileConsolidate from "../../src/assets/improve-strategies/consolidate.json";
import profileProactiveMaintenance from "../../src/assets/improve-strategies/proactive-maintenance.json";
import { resolveImproveStrategy } from "../../src/commands/improve/improve-strategies";
import type { AkmConfig } from "../../src/core/config/config";
import { ImproveProfileConfigSchema } from "../../src/core/config/config-schema";

const MINIMAL_CONFIG: AkmConfig = { semanticSearchMode: "off" };
const BUILTIN_STRATEGIES = ["default", "consolidate", "proactive-maintenance"] as const;

describe("default improve strategies (#552)", () => {
  test("complete resolved trees are pinned for all built-ins", () => {
    for (const name of BUILTIN_STRATEGIES) {
      expect(resolveImproveStrategy(name, MINIMAL_CONFIG)).toMatchSnapshot(name);
    }
  });
  test("proactive maintenance is opt-in", () => {
    expect(resolveImproveStrategy("default", MINIMAL_CONFIG).config.processes?.proactiveMaintenance?.enabled).toBe(
      false,
    );
    expect(resolveImproveStrategy("consolidate", MINIMAL_CONFIG).config.processes?.proactiveMaintenance?.enabled).toBe(
      false,
    );
    expect(
      resolveImproveStrategy("proactive-maintenance", MINIMAL_CONFIG).config.processes?.proactiveMaintenance?.enabled,
    ).toBe(true);
  });

  test("judgment-enabled shipped strategies use durable boolean opt-in", () => {
    expect(profileProactiveMaintenance.processes.triage.judgment).toBe(true);
  });

  test("consolidate: validates against the live schema", () => {
    expect(() => ImproveProfileConfigSchema.parse(profileConsolidate)).not.toThrow();
  });

  test("default resolves with improve-stage extract off", () => {
    expect(resolveImproveStrategy("default", MINIMAL_CONFIG).config.processes?.extract?.enabled).toBe(false);
  });

  test("consolidate resolves to consolidation-only with maxChunkSize 25 and no pool-size floor", () => {
    const p = resolveImproveStrategy("consolidate", MINIMAL_CONFIG).config;
    expect(p.processes?.consolidate?.enabled).toBe(true);
    expect(p.processes?.consolidate?.allowedTypes).toEqual(["memory"]);
    expect(p.processes?.consolidate?.maxChunkSize).toBe(25);
    // The built-in strategies no longer ship a minPoolSize floor: a shipped
    // 500 meant `akm improve --strategy consolidate`, typed by a human,
    // silently did nothing on almost every real install. Unset resolves to
    // the runtime default of 0 (disabled) in preparation.ts.
    expect(p.processes?.consolidate?.minPoolSize).toBeUndefined();
    expect(p.processes?.reflect?.enabled).toBe(false);
    expect(p.processes?.distill?.enabled).toBe(false);
    expect(p.processes?.memoryInference?.enabled).toBe(false);
    expect(p.processes?.extract?.enabled).toBe(false);
    expect(p.processes?.triage?.enabled).toBe(false);
    expect(p.sync?.push).toBe(true);
  });

  test("default leaves the judged triage drain off", () => {
    const p = resolveImproveStrategy("default", MINIMAL_CONFIG).config;
    expect(p.processes?.triage?.enabled).toBe(false);
  });

  // #1130: quick, reflect-distill, thorough and catchup were removed.
  describe.each(["quick", "reflect-distill", "thorough", "catchup"])("removed built-in %s (#1130)", (name) => {
    test("with no user block, resolution fails with an error that names default", () => {
      expect(() => resolveImproveStrategy(name, MINIMAL_CONFIG)).toThrow(/removed in 0\.10.*"default"/);
    });

    test("a user block of that name is a user-defined strategy that inherits default", () => {
      const config: AkmConfig = {
        ...MINIMAL_CONFIG,
        improve: { strategies: { [name]: { processes: { reflect: { limit: 3 } } } } },
      };
      const selected = resolveImproveStrategy(name, config);
      const def = resolveImproveStrategy("default", MINIMAL_CONFIG).config;
      expect(selected.name).toBe(name);
      expect(selected.config.processes?.reflect?.limit).toBe(3);
      expect(selected.config.processes?.triage).toEqual(def.processes?.triage);
      expect(selected.config.processes?.consolidate).toEqual(def.processes?.consolidate);
    });
  });

  test("minPoolSize is no longer shipped on consolidate.json now that 0 is the runtime default", () => {
    // #553 added `minPoolSize` to consolidate.json (500) and catchup.json (0); catchup is gone (#1130).
    expect(JSON.stringify(profileConsolidate)).not.toContain("minPoolSize");
  });
});
