// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`default improve strategies (#552) complete resolved trees are pinned for all built-ins: default 1`] = `
{
  "config": {
    "description": "Standard improve pass — reflect (rewrites only from negative feedback), distill, consolidation (promotion plus the reviewed pair-pass retire/supersede proposals), and validation. Memory inference is listed below but only runs when experimental.improveAutonomy is set; improve-stage extract and proactive maintenance off.",
    "processes": {
      "consolidate": {
        "allowedTypes": [
          "memory",
        ],
        "enabled": true,
      },
      "distill": {
        "allowedTypes": [
          "memory",
        ],
        "enabled": true,
        "requirePlannedRefs": false,
      },
      "extract": {
        "enabled": false,
        "triage": {
          "enabled": true,
          "minScore": 2,
        },
      },
      "memoryInference": {
        "enabled": true,
      },
      "proactiveMaintenance": {
        "dueDays": 30,
        "enabled": false,
        "maxPerRun": 15,
      },
      "reflect": {
        "allowedTypes": [
          "agent",
          "command",
          "knowledge",
          "lesson",
          "memory",
          "skill",
          "workflow",
        ],
        "enabled": true,
        "limit": 25,
      },
      "triage": {
        "applyMode": "queue",
        "enabled": false,
        "policy": "personal-stash",
      },
      "validation": {
        "enabled": true,
      },
    },
    "sync": {
      "enabled": true,
      "push": true,
    },
  },
  "name": "default",
}
`;

exports[`default improve strategies (#552) complete resolved trees are pinned for all built-ins: consolidate 1`] = `
{
  "config": {
    "description": "Consolidation-only pass — merges, deduplicates, and prunes memories every 4h.",
    "processes": {
      "consolidate": {
        "allowedTypes": [
          "memory",
        ],
        "enabled": true,
        "maxChunkSize": 25,
      },
      "distill": {
        "allowedTypes": [
          "memory",
        ],
        "enabled": false,
        "requirePlannedRefs": false,
      },
      "extract": {
        "enabled": false,
        "triage": {
          "enabled": true,
          "minScore": 2,
        },
      },
      "memoryInference": {
        "enabled": false,
      },
      "proactiveMaintenance": {
        "dueDays": 30,
        "enabled": false,
        "maxPerRun": 15,
      },
      "reflect": {
        "allowedTypes": [
          "agent",
          "command",
          "knowledge",
          "lesson",
          "memory",
          "skill",
          "workflow",
        ],
        "enabled": false,
        "limit": 25,
      },
      "triage": {
        "applyMode": "queue",
        "enabled": false,
        "policy": "personal-stash",
      },
      "validation": {
        "enabled": false,
      },
    },
    "sync": {
      "enabled": true,
      "push": true,
    },
  },
  "name": "consolidate",
}
`;

exports[`default improve strategies (#552) complete resolved trees are pinned for all built-ins: proactive-maintenance 1`] = `
{
  "config": {
    "description": "Opt-in proactive-maintenance pass — reflect (on negative feedback), distill, proposal triage (promote, high budget), and the proactive-maintenance lane (maxPerRun 100), which picks due assets for scoring but plans no rewrite; consolidate/memoryInference/extract off. Sync disabled: an interrupted run would otherwise leave an uncommitted backlog.",
    "processes": {
      "consolidate": {
        "allowedTypes": [
          "memory",
        ],
        "enabled": false,
      },
      "distill": {
        "allowedTypes": [
          "memory",
        ],
        "enabled": true,
        "requirePlannedRefs": false,
      },
      "extract": {
        "enabled": false,
        "triage": {
          "enabled": true,
          "minScore": 2,
        },
      },
      "memoryInference": {
        "enabled": false,
      },
      "proactiveMaintenance": {
        "dueDays": 30,
        "enabled": true,
        "maxPerRun": 100,
      },
      "reflect": {
        "allowedTypes": [
          "agent",
          "command",
          "knowledge",
          "lesson",
          "memory",
          "skill",
          "workflow",
        ],
        "enabled": true,
        "limit": 25,
      },
      "triage": {
        "applyMode": "promote",
        "enabled": true,
        "judgment": {
          "enabled": true,
        },
        "maxAcceptsPerRun": 100,
        "maxDiffLines": 200,
        "policy": "personal-stash",
      },
      "validation": {
        "enabled": false,
      },
    },
    "sync": {
      "enabled": false,
      "push": true,
    },
  },
  "name": "proactive-maintenance",
}
`;
